improve the dashboard view to ensure all persons visible
the current dashboard view renders the out of hours person of screen so this has
been changed to be three column.

undid a setting change i had modified while testing.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,7 +60,11 @@ li {
 
 .column {
     float:left;
-    width:49%;
+    width:33.333%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0 30px;
 }
 
 .column:last-child {
